@@ -5,6 +5,9 @@
 # Returned filename is either the input filename or a temporary filename;
 # in the latter case the caller must ensure that it is removed.
 # Other temporary files used are removed by the function.
+from warnings import warnpy3k
+warnpy3k("the torgb module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 import os
 import tempfile
